# Medsignal_Team2

./: .gitignore  CLAUDE.md  README.md  check_db.py  conftest.py  main.py  pyproject.toml
Analysis Documents/: Golden Signal Validation Set.docx  MedSignal_RxNorm_Analysis.docx
app/: check_chroma.py  main.py
app/agents/: agent1_detector.py  agent2_retriever.py  agent3_assessor.py  pipeline.py  state.py
app/core/: llm_router.py
app/models/: __init__.py  brief.py  hitl.py
app/observability/: __init__.py  metrics.py
app/routers/: evaluation.py  health.py  hitl.py  signals.py
app/scripts/: download_faers.py  faers_prep.py  load_pubmed.py
app/services/: rxnorm_service.py  signal_service.py
app/utils/: chromadb_client.py  redis_client.py  snowflake_client.py
data/: schema.sql  snowflake_schema.sql
data/erd/: MedSignal ERD.drawio
docker/: docker-compose.yml  kafka_topics.sh
docs/: medsignal_test_scenarios.xlsx
evaluation/: hallucination_check.py  rubric_results.json  rubric_scorer.py
pipelines/: branch2_prr.py  spark_branch1.py
scripts/: faers_prep.py  gen_test_scenarios.py  rxnorm_snowflake_migration.py
streamlit_app/: app.py
streamlit_app/components/: nav.py  topbar.py
streamlit_app/pages/: 1_signal_feed.py  2_signal_detail.py  3_hitl_queue.py  4_evaluation.py  5_metrics.py  6_evidence_explorer.py
tests/: test_agent2.py  test_agent3.py  test_hallucination_check.py  test_hitl.py  test_on_demand.py  test_redis.py  test_smoke.py  test_snowflake_connector.py
tests/hypothesis/: test_properties.py
tests/integration/: test_agent2.py  test_agent3.py  test_evaluation_integration.py  test_hitl.py  test_on_demand.py  test_redis.py  test_snowflake_connector.py  test_spark_branch1_integration.py
tests/unit/: test_agent1.py  test_agent2.py  test_agent3.py  test_branch2.py  test_evaluation.py  test_hallucination_check.py  test_hitl.py  test_kafka_read.py  test_llm_router.py  test_model_query_comparison.py  test_redis.py  test_signals_api.py  test_spark_branch1.py
