[project]
name = "medsignal"
version = "0.1.0"
description = ""
authors = [
    {name = "pradhanprac"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.135.3,<0.136.0)",
    "uvicorn (>=0.44.0,<0.45.0)",
    "requests (>=2.33.1,<3.0.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pandas (>=3.0.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
