[project]
name = "medsignal"
version = "0.1.0"
description = ""
authors = [
    {name = "pradhanprac"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.135.3,<0.136.0)",
    "uvicorn (>=0.44.0,<0.45.0)",
    "requests (>=2.33.1,<3.0.0)",
    "kafka-python (>=2.3.1,<3.0.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pandas (>=3.0.2,<4.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "biopython (>=1.87,<2.0)",
    "sentence-transformers (>=5.4.0,<6.0.0)",
    "chromadb (>=1.5.7,<2.0.0)",
    "structlog (>=25.5.0,<26.0.0)",
    "snowflake-connector-python (>=4.4.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
